test: more specialized test suites