@@ -49,7 +49,7 @@ public class Formatter {
     public static String[] replaceEmptyWithRoot(String[] strings){
         ArrayList<String> list = new ArrayList<>(Arrays.asList(strings));
 
-        if (list.getFirst().equals(""))
+        if (list.get(0).equals(""))
             list.set(0, "/");
 
         return list.toArray(new String[0]);
